# pdf_esg_extraction

./: README.md  main.py  pyproject.toml
config/: indicators.py  pages.py
db/: extractions.sqlite
output/: extractions.csv  extractions.db
src/: docling_reader.py  exporter.py  extractor.py  llm_agent.py  main.py  ollama.py  pdf_reader.py  storage.py  utils.py
tests/: conftest.py  test_extractor.py  test_llm.py  test_pdf_reader.py  test_storage_manual.py
