[project]
name = "pdf-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"numpy>=2.4.0",
	"langchain",
	"langchain_community",
	"langchain-openai",
	"langchain-groq",
	"python-dotenv",
	"langchain-google-genai",
	"ipykernel>=7.1.0",
	"langchain-xai>=1.1.0",
	"pytest>=9.0.2",
	"pymupdf>=1.26.7",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
